--- a/assignment04-tanyasiii.qmd
+++ b/assignment04-tanyasiii.qmd
@@ -1,14 +1,14 @@
 ---
 title: Assignment 04
 author:
-  - name: Norah Jones
+  - name: Tracy Anyasi
     affiliations:
       - id: bu
         name: Boston University
         city: Boston
         state: MA
 number-sections: true
-date: '2024-11-21'
+date: '2025-10-08'
 date-modified: today
 date-format: long
 format:
