--- a/assignment04-tanyasiii.qmd
+++ b/assignment04-tanyasiii.qmd
@@ -1,5 +1,6 @@
 ---
 title: Assignment 04
+subtitle: "Regression Analysis in Pyspark"
 author:
   - name: Tracy Anyasi
     affiliations:
@@ -22,3 +23,28 @@ execute:
   eval: false
   freeze: auto
 ---
+
+
+```{python}
+from pyspark.sql import SparkSession
+import pandas as pd
+import plotly.express as px
+import plotly.io as pio
+import numpy as np
+
+np.random.seed(42)
+
+pio.renderers.default = "notebook+notebook_connected+vscode"
+
+# Initialize Spark Session
+spark = SparkSession.builder.appName("LightcastData").getOrCreate()
+
+# Load Data
+df = spark.read.option("header", "true").option("inferSchema", "true").option("multiLine","true").option("escape", "\"").csv("./data/lightcast_job_postings.csv")
+
+# Show Schema and Sample Data
+print("---This is Diagnostic check, No need to print it in the final doc---")
+
+# df.printSchema() # comment this line when rendering the submission
+df.show(5)
+```
