feature engineering w/ train and split

--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -89,12 +89,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Feature Engineering"
+        "## Feature Engineering"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Remove incomplete data, keep relevant variables, and iron out complicated string values\n",
+        "Encoder turns categorical columns (remote, hybrid, onsite) to numeric ones (1 or 0) based on input"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -102,14 +110,109 @@
         "#| echo: falase\n",
         "#| fig-align: center\n",
         "\n",
-        "from pyspark.sql.functions import col, pow\n",
-        "from pyspark.ml.feature import StringIndexer, OneHotEncoder, VectorAssembler\n",
+        "from pyspark.sql.functions import col, pow, when\n",
+        "from pyspark.ml.feature import StringIndexer, VectorAssembler, OneHotEncoder\n",
         "from pyspark.ml import Pipeline\n",
         "\n",
-        "#drop rows with NA values\n",
-        "df = df.dropna(subset=[\n",
-        "    \"SALARY\", \n",
-        "])"
+        "# remove rows with NAs\n",
+        "df_cleaned = df.dropna(subset=[\n",
+        "    \"SALARY\", \"MIN_YEARS_EXPERIENCE\", \"STATE_NAME\", \"EMPLOYMENT_TYPE_NAME\",\n",
+        "    \"REMOTE_TYPE_NAME\", \"MIN_EDULEVELS_NAME\", \"DURATION\", \n",
+        "    \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"\n",
+        "])\n",
+        "\n",
+        "eda_cols = [\n",
+        "    \"SALARY\", \"MIN_YEARS_EXPERIENCE\", \"DURATION\", \"COMPANY_IS_STAFFING\",\n",
+        "    \"IS_INTERNSHIP\", \"STATE_NAME\", \"REMOTE_TYPE_NAME\",\n",
+        "    \"EMPLOYMENT_TYPE_NAME\", \"MIN_EDULEVELS_NAME\"\n",
+        "]\n",
+        "df_cleaned = df_cleaned.select(eda_cols)\n",
+        "\n",
+        "# clean up REMOTE_TYPE_NAME and reduce the different inputs\n",
+        "df_cleaned = df_cleaned.withColumn(\n",
+        "    \"REMOTE_TYPE_NAME\",\n",
+        "    when(col(\"REMOTE_TYPE_NAME\") == \"Remote\", \"Remote\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"[None]\", \"Undefined\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"Not Remote\", \"On Premise\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\") == \"Hybrid Remote\", \"Hybrid\")\n",
+        "    .when(col(\"REMOTE_TYPE_NAME\").isNull(), \"On Premise\")\n",
+        "    .otherwise(col(\"REMOTE_TYPE_NAME\"))\n",
+        ")\n",
+        "\n",
+        "# Clean EMPLOYMENT_TYPE_NAME\n",
+        "df_cleaned = df_cleaned.withColumn(\n",
+        "    \"EMPLOYMENT_TYPE_NAME\",\n",
+        "    when(col(\"EMPLOYMENT_TYPE_NAME\") == \"Part-time / full-time\", \"Flexible\")\n",
+        "    .when(col(\"EMPLOYMENT_TYPE_NAME\") == \"Part-time (â‰¤ 32 hours)\", \"Parttime\")\n",
+        "    .when(col(\"EMPLOYMENT_TYPE_NAME\") == \"Full-time (> 32 hours)\", \"Fulltime\")\n",
+        "    .when(col(\"EMPLOYMENT_TYPE_NAME\").isNull(), \"Fulltime\")\n",
+        "    .otherwise(col(\"EMPLOYMENT_TYPE_NAME\"))\n",
+        ")\n",
+        "\n",
+        "# Categorical and numeric columns\n",
+        "categorical_cols = [\"EMPLOYMENT_TYPE_NAME\", \"REMOTE_TYPE_NAME\"]\n",
+        "continuous_cols = [\"MIN_YEARS_EXPERIENCE\", \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"]\n",
+        "\n",
+        "# Index and One-Hot Encode\n",
+        "indexers = [StringIndexer(inputCol=col, outputCol=f\"{col}_Idx\", handleInvalid=\"skip\") for col in categorical_cols]\n",
+        "encoders = [OneHotEncoder(inputCol=f\"{col}_Idx\", outputCol=f\"{col}_vec\") for col in categorical_cols]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+------+--------------------------------------+-------------------------------------------+\n",
+            "|SALARY|features                              |features_poly                              |\n",
+            "+------+--------------------------------------+-------------------------------------------+\n",
+            "|192800|(9,[0,1,4,6],[6.0,55.0,1.0,1.0])      |(10,[0,1,4,6,9],[6.0,55.0,1.0,1.0,36.0])   |\n",
+            "|125900|(9,[0,1,4,6],[12.0,18.0,1.0,1.0])     |(10,[0,1,4,6,9],[12.0,18.0,1.0,1.0,144.0]) |\n",
+            "|118560|[5.0,20.0,0.0,1.0,1.0,0.0,0.0,1.0,0.0]|[5.0,20.0,0.0,1.0,1.0,0.0,0.0,1.0,0.0,25.0]|\n",
+            "|192800|(9,[0,1,4,6],[6.0,55.0,1.0,1.0])      |(10,[0,1,4,6,9],[6.0,55.0,1.0,1.0,36.0])   |\n",
+            "|116500|(9,[0,1,4,6],[12.0,16.0,1.0,1.0])     |(10,[0,1,4,6,9],[12.0,16.0,1.0,1.0,144.0]) |\n",
+            "+------+--------------------------------------+-------------------------------------------+\n",
+            "only showing top 5 rows\n"
+          ]
+        }
+      ],
+      "source": [
+        "# combines all categorical and numeric columns into one vector coulmn\n",
+        "assembler = VectorAssembler(\n",
+        "    inputCols=continuous_cols + [f\"{col}_vec\" for col in categorical_cols],\n",
+        "    outputCol=\"features\"\n",
+        ")\n",
+        "\n",
+        "#create pipeline for sequential transformation\n",
+        "pipeline = Pipeline(stages=indexers + encoders + [assembler])\n",
+        "data = pipeline.fit(df_cleaned).transform(df_cleaned)\n",
+        "\n",
+        "# polynomial regression for MIN_YEARS_EXPERIENCE\n",
+        "data = data.withColumn(\"MIN_YEARS_EXPERIENCE_SQ\", pow(col(\"MIN_YEARS_EXPERIENCE\"), 2))\n",
+        "\n",
+        "#assemble og features plus poly feature into new feature vector\n",
+        "assembler_poly = VectorAssembler(\n",
+        "    inputCols=[\"features\", \"MIN_YEARS_EXPERIENCE_SQ\"],\n",
+        "    outputCol=\"features_poly\"\n",
+        ")\n",
+        "data = assembler_poly.transform(data)\n",
+        "\n",
+        "# split data into training and testing sets for model evaluation\n",
+        "regression_train, regression_test = data.randomSplit([0.8, 0.2], seed=42)\n",
+        "\n",
+        "# displays final structure with salary as target\n",
+        "data.select(\"SALARY\", \"features\", \"features_poly\").show(5, truncate=False)"
       ]
     }
   ],
