justify split reasoning

--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -209,7 +209,8 @@
         "data = assembler_poly.transform(data)\n",
         "\n",
         "# split data into training and testing sets for model evaluation\n",
-        "regression_train, regression_test = data.randomSplit([0.8, 0.2], seed=42)\n",
+        "regression_train, regression_test = data.randomSplit([0.8, 0.2], seed=51)\n",
+        "# This split reserves 80% of the data for training and 20% for testing which provides enough data for the model to learn while keeping a reliable holdout set for evaluation.\n",
         "\n",
         "# displays final structure with salary as target\n",
         "data.select(\"SALARY\", \"features\", \"features_poly\").show(5, truncate=False)"
