--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -114,7 +114,7 @@
         "from pyspark.ml.feature import StringIndexer, VectorAssembler, OneHotEncoder\n",
         "from pyspark.ml import Pipeline\n",
         "\n",
-        "# remove rows with NAs\n",
+        "#remove rows with NAs\n",
         "df_cleaned = df.dropna(subset=[\n",
         "    \"SALARY\", \"MIN_YEARS_EXPERIENCE\", \"STATE_NAME\", \"EMPLOYMENT_TYPE_NAME\",\n",
         "    \"REMOTE_TYPE_NAME\", \"MIN_EDULEVELS_NAME\", \"DURATION\", \n",
@@ -128,7 +128,7 @@
         "]\n",
         "df_cleaned = df_cleaned.select(eda_cols)\n",
         "\n",
-        "# clean up REMOTE_TYPE_NAME and reduce the different inputs\n",
+        "#clean up REMOTE_TYPE_NAME and reduce the different inputs\n",
         "df_cleaned = df_cleaned.withColumn(\n",
         "    \"REMOTE_TYPE_NAME\",\n",
         "    when(col(\"REMOTE_TYPE_NAME\") == \"Remote\", \"Remote\")\n",
@@ -139,7 +139,7 @@
         "    .otherwise(col(\"REMOTE_TYPE_NAME\"))\n",
         ")\n",
         "\n",
-        "# Clean EMPLOYMENT_TYPE_NAME\n",
+        "#clean EMPLOYMENT_TYPE_NAME\n",
         "df_cleaned = df_cleaned.withColumn(\n",
         "    \"EMPLOYMENT_TYPE_NAME\",\n",
         "    when(col(\"EMPLOYMENT_TYPE_NAME\") == \"Part-time / full-time\", \"Flexible\")\n",
@@ -208,12 +208,72 @@
         ")\n",
         "data = assembler_poly.transform(data)\n",
         "\n",
-        "# split data into training and testing sets for model evaluation\n",
+        "#split data into training and testing sets for model evaluation\n",
         "regression_train, regression_test = data.randomSplit([0.8, 0.2], seed=51)\n",
-        "# This split reserves 80% of the data for training and 20% for testing which provides enough data for the model to learn while keeping a reliable holdout set for evaluation.\n",
+        "#This split reserves 80% of the data for training and 20% for testing which provides enough data for the model to learn while keeping a reliable holdout set for evaluation.\n",
         "\n",
-        "# displays final structure with salary as target\n",
+        "#displays final structure with salary as target\n",
         "data.select(\"SALARY\", \"features\", \"features_poly\").show(5, truncate=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Linear Regression"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "25/10/04 20:26:10 WARN Instrumentation: [ad5ff1cc] regParam is zero, which might cause numerical instability and overfitting.\n",
+            "[Stage 39:>                                                         (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "R²: 0.2775, RMSE: 35354.22, MAE: 27394.26\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "from pyspark.ml.regression import LinearRegression\n",
+        "from pyspark.ml.evaluation import RegressionEvaluator\n",
+        "\n",
+        "#use assembled features vector and target variable for LR\n",
+        "lr_model = LinearRegression(\n",
+        "    featuresCol=\"features\",  \n",
+        "    labelCol=\"SALARY\",      \n",
+        "    predictionCol=\"prediction\"\n",
+        ")\n",
+        "\n",
+        "#training model\n",
+        "lr_fit = lr_model.fit(regression_train)\n",
+        "\n",
+        "#making predictions\n",
+        "predictions = lr_fit.transform(regression_test)\n",
+        "\n",
+        "#evaluate the model and its performance\n",
+        "r2 = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"r2\").evaluate(predictions)\n",
+        "rmse = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"rmse\").evaluate(predictions)\n",
+        "mae = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"mae\").evaluate(predictions)\n",
+        "\n",
+        "print(f\"R²: {r2:.4f}, RMSE: {rmse:.2f}, MAE: {mae:.2f}\")\n"
       ]
     }
   ],
