Attempt 2 at LR

--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -33,13 +33,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
+            "WARNING: Using incubator modules: jdk.incubator.vector\n",
+            "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
+            "Setting default log level to \"WARN\".\n",
+            "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+            "25/10/05 17:25:30 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
             "                                                                                \r"
           ]
         },
@@ -47,7 +52,21 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "---This is Diagnostic check, No need to print it in the final doc---\n",
+            "---This is Diagnostic check, No need to print it in the final doc---\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "25/10/05 17:25:47 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "+--------------------+-----------------+----------------------+----------+--------+---------+--------+--------------------+--------------------+--------------------+-----------+-------------------+--------------------+--------------------+---------------+----------------+--------+--------------------+-----------+-------------------+----------------+---------------------+-------------+-------------------+-------------+------------------+---------------+--------------------+--------------------+--------------------+-------------+------+-----------+----------------+-------------------+---------+-----------+--------------------+--------------------+-------------+------+--------------+-----+--------------------+-----+----------+---------------+--------------------+---------------+--------------------+------------+--------------------+------------+--------------------+------+--------------------+------+--------------------+------+--------------------+------+--------------------+------+--------------------+------------------+-------------------+--------------------+--------------------+--------------------+--------------------+-----------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+--------------------+----------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+--------------------+----------+--------------------+----------+---------------+----------+---------------+---------------+--------------------+--------------+--------------------+--------------------------+-------------------------------+--------------------+-------------------------+-----------------------------+----------------------------------+-----------------+----------------------+-----------------------+----------------------------+------------------+-----------------------+-------+--------------------+-------+--------------------+-------+---------------+-------+---------------+-----------------+----------------------+------------+--------------------+------------+--------------------+------------+--------------------+------------+--------------------+------------+--------------------+\n",
             "|                  ID|LAST_UPDATED_DATE|LAST_UPDATED_TIMESTAMP|DUPLICATES|  POSTED|  EXPIRED|DURATION|        SOURCE_TYPES|             SOURCES|                 URL|ACTIVE_URLS|ACTIVE_SOURCES_INFO|           TITLE_RAW|                BODY|MODELED_EXPIRED|MODELED_DURATION| COMPANY|        COMPANY_NAME|COMPANY_RAW|COMPANY_IS_STAFFING|EDUCATION_LEVELS|EDUCATION_LEVELS_NAME|MIN_EDULEVELS| MIN_EDULEVELS_NAME|MAX_EDULEVELS|MAX_EDULEVELS_NAME|EMPLOYMENT_TYPE|EMPLOYMENT_TYPE_NAME|MIN_YEARS_EXPERIENCE|MAX_YEARS_EXPERIENCE|IS_INTERNSHIP|SALARY|REMOTE_TYPE|REMOTE_TYPE_NAME|ORIGINAL_PAY_PERIOD|SALARY_TO|SALARY_FROM|            LOCATION|                CITY|    CITY_NAME|COUNTY|   COUNTY_NAME|  MSA|            MSA_NAME|STATE|STATE_NAME|COUNTY_OUTGOING|COUNTY_NAME_OUTGOING|COUNTY_INCOMING|COUNTY_NAME_INCOMING|MSA_OUTGOING|   MSA_NAME_OUTGOING|MSA_INCOMING|   MSA_NAME_INCOMING|NAICS2|         NAICS2_NAME|NAICS3|         NAICS3_NAME|NAICS4|         NAICS4_NAME|NAICS5|         NAICS5_NAME|NAICS6|         NAICS6_NAME|             TITLE|         TITLE_NAME|         TITLE_CLEAN|              SKILLS|         SKILLS_NAME|  SPECIALIZED_SKILLS|SPECIALIZED_SKILLS_NAME|      CERTIFICATIONS| CERTIFICATIONS_NAME|       COMMON_SKILLS|  COMMON_SKILLS_NAME|     SOFTWARE_SKILLS|SOFTWARE_SKILLS_NAME|      ONET|           ONET_NAME| ONET_2019|      ONET_2019_NAME|                CIP6|           CIP6_NAME|                CIP4|           CIP4_NAME|                CIP2|           CIP2_NAME|SOC_2021_2|     SOC_2021_2_NAME|SOC_2021_3|     SOC_2021_3_NAME|SOC_2021_4|SOC_2021_4_NAME|SOC_2021_5|SOC_2021_5_NAME|LOT_CAREER_AREA|LOT_CAREER_AREA_NAME|LOT_OCCUPATION| LOT_OCCUPATION_NAME|LOT_SPECIALIZED_OCCUPATION|LOT_SPECIALIZED_OCCUPATION_NAME|LOT_OCCUPATION_GROUP|LOT_OCCUPATION_GROUP_NAME|LOT_V6_SPECIALIZED_OCCUPATION|LOT_V6_SPECIALIZED_OCCUPATION_NAME|LOT_V6_OCCUPATION|LOT_V6_OCCUPATION_NAME|LOT_V6_OCCUPATION_GROUP|LOT_V6_OCCUPATION_GROUP_NAME|LOT_V6_CAREER_AREA|LOT_V6_CAREER_AREA_NAME|  SOC_2|          SOC_2_NAME|  SOC_3|          SOC_3_NAME|  SOC_4|     SOC_4_NAME|  SOC_5|     SOC_5_NAME|LIGHTCAST_SECTORS|LIGHTCAST_SECTORS_NAME|NAICS_2022_2|   NAICS_2022_2_NAME|NAICS_2022_3|   NAICS_2022_3_NAME|NAICS_2022_4|   NAICS_2022_4_NAME|NAICS_2022_5|   NAICS_2022_5_NAME|NAICS_2022_6|   NAICS_2022_6_NAME|\n",
             "+--------------------+-----------------+----------------------+----------+--------+---------+--------+--------------------+--------------------+--------------------+-----------+-------------------+--------------------+--------------------+---------------+----------------+--------+--------------------+-----------+-------------------+----------------+---------------------+-------------+-------------------+-------------+------------------+---------------+--------------------+--------------------+--------------------+-------------+------+-----------+----------------+-------------------+---------+-----------+--------------------+--------------------+-------------+------+--------------+-----+--------------------+-----+----------+---------------+--------------------+---------------+--------------------+------------+--------------------+------------+--------------------+------+--------------------+------+--------------------+------+--------------------+------+--------------------+------+--------------------+------------------+-------------------+--------------------+--------------------+--------------------+--------------------+-----------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+--------------------+----------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+--------------------+----------+--------------------+----------+---------------+----------+---------------+---------------+--------------------+--------------+--------------------+--------------------------+-------------------------------+--------------------+-------------------------+-----------------------------+----------------------------------+-----------------+----------------------+-----------------------+----------------------------+------------------+-----------------------+-------+--------------------+-------+--------------------+-------+---------------+-------+---------------+-----------------+----------------------+------------+--------------------+------------+--------------------+------------+--------------------+------------+--------------------+------------+--------------------+\n",
@@ -102,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -160,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -209,7 +228,7 @@
         "data = assembler_poly.transform(data)\n",
         "\n",
         "#split data into training and testing sets for model evaluation\n",
-        "regression_train, regression_test = data.randomSplit([0.8, 0.2], seed=51)\n",
+        "reg_train, reg_test = data.randomSplit([0.8, 0.2], seed=51)\n",
         "#This split reserves 80% of the data for training and 20% for testing which provides enough data for the model to learn while keeping a reliable holdout set for evaluation.\n",
         "\n",
         "#displays final structure with salary as target\n",
@@ -232,15 +251,17 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "25/10/04 20:26:10 WARN Instrumentation: [ad5ff1cc] regParam is zero, which might cause numerical instability and overfitting.\n",
-            "[Stage 39:>                                                         (0 + 1) / 1]\r"
+            "25/10/05 17:42:24 WARN Instrumentation: [edf115ff] regParam is zero, which might cause numerical instability and overfitting.\n",
+            "[Stage 56:>                                                         (0 + 1) / 1]\r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "R²: 0.2775, RMSE: 35354.22, MAE: 27394.26\n"
+            "R² Score: 0.2840\n",
+            "RMSE: 35315.94\n",
+            "MAE: 27676.61\n"
           ]
         },
         {
@@ -254,26 +275,123 @@
       "source": [
         "from pyspark.ml.regression import LinearRegression\n",
         "from pyspark.ml.evaluation import RegressionEvaluator\n",
+        "import pandas as pd\n",
+        "from scipy.stats import t\n",
         "\n",
-        "#use assembled features vector and target variable for LR\n",
-        "lr_model = LinearRegression(\n",
-        "    featuresCol=\"features\",  \n",
-        "    labelCol=\"SALARY\",      \n",
-        "    predictionCol=\"prediction\"\n",
-        ")\n",
+        "lin_reg = LinearRegression(featuresCol=\"features\", labelCol=\"SALARY\")\n",
         "\n",
-        "#training model\n",
-        "lr_fit = lr_model.fit(regression_train)\n",
+        "lin_reg_fit = lin_reg.fit(reg_train) #fit model to training data\n",
         "\n",
-        "#making predictions\n",
-        "predictions = lr_fit.transform(regression_test)\n",
+        "salary_pred = lin_reg_fit.transform(reg_test) #predicting on test data\n",
         "\n",
-        "#evaluate the model and its performance\n",
-        "r2 = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"r2\").evaluate(predictions)\n",
-        "rmse = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"rmse\").evaluate(predictions)\n",
-        "mae = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"mae\").evaluate(predictions)\n",
+        "#define the evaluators\n",
+        "r2_eval = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"r2\")\n",
+        "rmse_eval = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+        "mae_eval = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"mae\")\n",
         "\n",
-        "print(f\"R²: {r2:.4f}, RMSE: {rmse:.2f}, MAE: {mae:.2f}\")\n"
+        "#generate metrics\n",
+        "r2_score = r2_eval.evaluate(salary_pred)\n",
+        "rmse_val = rmse_eval.evaluate(salary_pred)\n",
+        "mae_val = mae_eval.evaluate(salary_pred)\n",
+        "\n",
+        "print(f\"R² Score: {r2_score:.4f}\")\n",
+        "print(f\"RMSE: {rmse_val:.2f}\")\n",
+        "print(f\"MAE: {mae_val:.2f}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Coefficient Summary:\n",
+            "                  Feature      Estimate    Std Error     t-Stat       p-Value  \\\n",
+            "0               Intercept  76735.577948   102.356000  66.277489  0.000000e+00   \n",
+            "1    MIN_YEARS_EXPERIENCE   6783.898664    23.632630  -1.831651  6.702934e-02   \n",
+            "2                DURATION    -43.286721  6866.446762  -1.025459  3.051684e-01   \n",
+            "3           IS_INTERNSHIP  -7041.257613  1063.265929  -0.595172  5.517402e-01   \n",
+            "4     COMPANY_IS_STAFFING   -632.826152  3011.540238  -0.421858  6.731367e-01   \n",
+            "5  EMPLOYMENT_TYPE_NAME_A  -1270.441524  3605.833255  -1.077711  2.811853e-01   \n",
+            "6  EMPLOYMENT_TYPE_NAME_B  -3886.046755  2462.498142   3.306373  9.480161e-04   \n",
+            "7      REMOTE_TYPE_NAME_X   8141.937756  2529.947825   3.635882  2.782402e-04   \n",
+            "8      REMOTE_TYPE_NAME_Y   9198.592476  3172.252546   7.636575  2.398082e-14   \n",
+            "9      REMOTE_TYPE_NAME_Z  24225.144004  3579.670705  21.436491  0.000000e+00   \n",
+            "\n",
+            "   95% CI Lower  95% CI Upper  \n",
+            "0  76534.942765  76936.213130  \n",
+            "1   6737.574686   6830.222643  \n",
+            "2 -13502.691172  13416.117730  \n",
+            "3  -9125.439821  -4957.075405  \n",
+            "4  -6535.957638   5270.305334  \n",
+            "5  -8338.488484   5797.605435  \n",
+            "6  -8712.962276    940.868767  \n",
+            "7   3182.809376  13101.066136  \n",
+            "8   2980.437509  15416.747443  \n",
+            "9  17208.380095  31241.907914  \n",
+            "\n",
+            "Model Interpretation:\n",
+            "- R² of 0.28 suggests the model explains about 28.4% of salary variance.\n",
+            "- RMSE of $35,316 means predictions deviate by roughly this amount on average.\n",
+            "- Features with p-values < 0.05 are statistically significant in predicting salary.\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "#getting coefs and stats\n",
+        "model_summary = lin_reg_fit.summary\n",
+        "\n",
+        "coefs = lin_reg_fit.coefficients\n",
+        "intercept_val = lin_reg_fit.intercept\n",
+        "stderr = model_summary.coefficientStandardErrors\n",
+        "t_vals = model_summary.tValues\n",
+        "p_vals = model_summary.pValues\n",
+        "\n",
+        "# Compute degrees of freedom for t-distribution\n",
+        "n_obs = model_summary.numInstances\n",
+        "num_features = len(coefs)\n",
+        "dfree = n_obs - num_features - 1\n",
+        "\n",
+        "# Critical t-value for 95% CI\n",
+        "t_crit = t.ppf(0.975, dfree)\n",
+        "\n",
+        "feature_labels = [\n",
+        "    \"MIN_YEARS_EXPERIENCE\",\n",
+        "    \"DURATION\",\n",
+        "    \"IS_INTERNSHIP\",\n",
+        "    \"COMPANY_IS_STAFFING\",\n",
+        "    \"EMPLOYMENT_TYPE_NAME_A\",\n",
+        "    \"EMPLOYMENT_TYPE_NAME_B\",\n",
+        "    \"REMOTE_TYPE_NAME_X\",\n",
+        "    \"REMOTE_TYPE_NAME_Y\",\n",
+        "    \"REMOTE_TYPE_NAME_Z\"\n",
+        "]\n",
+        "\n",
+        "coef_table = pd.DataFrame({\n",
+        "    \"Feature\": [\"Intercept\"] + feature_labels,\n",
+        "    \"Estimate\": [intercept_val] + coefs.tolist(),\n",
+        "    \"Std Error\": stderr,\n",
+        "    \"t-Stat\": t_vals,\n",
+        "    \"p-Value\": p_vals\n",
+        "})\n",
+        "\n",
+        "# Add confidence intervals\n",
+        "coef_table[\"95% CI Lower\"] = coef_table[\"Estimate\"] - t_crit * coef_table[\"Std Error\"]\n",
+        "coef_table[\"95% CI Upper\"] = coef_table[\"Estimate\"] + t_crit * coef_table[\"Std Error\"]\n",
+        "\n",
+        "print(\"\\nCoefficient Summary:\")\n",
+        "print(coef_table)\n",
+        "\n",
+        "\n",
+        "print(\"\\nModel Interpretation:\")\n",
+        "print(f\"- R² of {r2_score:.2f} suggests the model explains about {r2_score*100:.1f}% of salary variance.\")\n",
+        "print(f\"- RMSE of ${rmse_val:,.0f} means predictions deviate by roughly this amount on average.\")\n",
+        "print(f\"- Features with p-values < 0.05 are statistically significant in predicting salary.\\n\")\n"
       ]
     }
   ],
