interpretation of LR model

--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -168,6 +168,9 @@
         "    .otherwise(col(\"EMPLOYMENT_TYPE_NAME\"))\n",
         ")\n",
         "\n",
+        "#df_cleaned = df_cleaned.filter(col(\"REMOTE_TYPE_NAME\") != \"Undefined\") -- initially wnated to remove the undefined but it dropped the\n",
+        "#percentage of the regression model\n",
+        "\n",
         "# Categorical and numeric columns\n",
         "categorical_cols = [\"EMPLOYMENT_TYPE_NAME\", \"REMOTE_TYPE_NAME\"]\n",
         "continuous_cols = [\"MIN_YEARS_EXPERIENCE\", \"DURATION\", \"IS_INTERNSHIP\", \"COMPANY_IS_STAFFING\"]\n",
@@ -179,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -236,6 +239,65 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Mapping for EMPLOYMENT_TYPE_NAME:\n",
+            "  Index 0 -> Fulltime\n",
+            "  Index 1 -> Parttime\n",
+            "  Index 2 -> Flexible\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 118:>                                                        (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Mapping for REMOTE_TYPE_NAME:\n",
+            "  Index 0 -> Undefined\n",
+            "  Index 1 -> Remote\n",
+            "  Index 2 -> Hybrid\n",
+            "  Index 3 -> On Premise\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "for col in categorical_cols:\n",
+        "    indexer = StringIndexer(inputCol=col, outputCol=f\"{col}_Idx\", handleInvalid=\"skip\")\n",
+        "    model = indexer.fit(df_cleaned)\n",
+        "    print(f\"\\nMapping for {col}:\")\n",
+        "    for i, category in enumerate(model.labels):\n",
+        "        print(f\"  Index {i} -> {category}\")\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -244,15 +306,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "25/10/05 17:42:24 WARN Instrumentation: [edf115ff] regParam is zero, which might cause numerical instability and overfitting.\n",
-            "[Stage 56:>                                                         (0 + 1) / 1]\r"
+            "25/10/05 18:12:14 WARN Instrumentation: [b737a262] regParam is zero, which might cause numerical instability and overfitting.\n",
+            "[Stage 128:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -301,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -332,13 +394,7 @@
             "6  -8712.962276    940.868767  \n",
             "7   3182.809376  13101.066136  \n",
             "8   2980.437509  15416.747443  \n",
-            "9  17208.380095  31241.907914  \n",
-            "\n",
-            "Model Interpretation:\n",
-            "- R² of 0.28 suggests the model explains about 28.4% of salary variance.\n",
-            "- RMSE of $35,316 means predictions deviate by roughly this amount on average.\n",
-            "- Features with p-values < 0.05 are statistically significant in predicting salary.\n",
-            "\n"
+            "9  17208.380095  31241.907914  \n"
           ]
         }
       ],
@@ -385,13 +441,18 @@
         "coef_table[\"95% CI Upper\"] = coef_table[\"Estimate\"] + t_crit * coef_table[\"Std Error\"]\n",
         "\n",
         "print(\"\\nCoefficient Summary:\")\n",
-        "print(coef_table)\n",
+        "print(coef_table)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The linear regression model explains approximately 28% of the variance in salaries, showing that while job attributes like as experience and remote status influence pay, substantial variation remains unexplained. This is likely due to qualitative factors like role seniority, company size, or negotiation effects. Undefined roles were initally excluded but that reduced the model's reliabilty and was subsequentially added as a baseline for remote roles.\n",
         "\n",
+        "Some statistically significant predictors include remote and hybrid roles (Remote Type X & Y) and Flexible employment type, all of which show clear positive or negative salary impacts. Compared to the baseline groups (Fulltime employment and Undefined remote), Flexible roles pay significantly less than Fulltime roles, whereas Parttime roles do not show a significant difference. For remote types, Remote, Hybrid, and On Premise roles show meaningful salary increases relative to Undefined roles, with On Premise roles exhibiting the largest premium of approximately $24K. \n",
         "\n",
-        "print(\"\\nModel Interpretation:\")\n",
-        "print(f\"- R² of {r2_score:.2f} suggests the model explains about {r2_score*100:.1f}% of salary variance.\")\n",
-        "print(f\"- RMSE of ${rmse_val:,.0f} means predictions deviate by roughly this amount on average.\")\n",
-        "print(f\"- Features with p-values < 0.05 are statistically significant in predicting salary.\\n\")\n"
+        "Non-significant coefficients, such as Parttime or certain remote categories, suggest that observed differences may be due to random variation rather than a true effect, while the significant predictors highlight areas where job structure meaningfully affects compensation."
       ]
     }
   ],
