--- a/assignment04-tanyasiii.ipynb
+++ b/assignment04-tanyasiii.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
@@ -177,15 +177,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "+------+--------------------------------------+\n",
-            "|SALARY|features                              |\n",
-            "+------+--------------------------------------+\n",
-            "|192800|(9,[0,1,4,6],[6.0,55.0,1.0,1.0])      |\n",
-            "|125900|(9,[0,1,4,6],[12.0,18.0,1.0,1.0])     |\n",
-            "|118560|[5.0,20.0,0.0,1.0,1.0,0.0,0.0,1.0,0.0]|\n",
-            "|192800|(9,[0,1,4,6],[6.0,55.0,1.0,1.0])      |\n",
-            "|116500|(9,[0,1,4,6],[12.0,16.0,1.0,1.0])     |\n",
-            "+------+--------------------------------------+\n",
+            "+------+--------------------------------------+-------------------------------------------+\n",
+            "|SALARY|features                              |features_poly                              |\n",
+            "+------+--------------------------------------+-------------------------------------------+\n",
+            "|192800|(9,[0,1,4,6],[6.0,55.0,1.0,1.0])      |(10,[0,1,4,6,9],[6.0,55.0,1.0,1.0,36.0])   |\n",
+            "|125900|(9,[0,1,4,6],[12.0,18.0,1.0,1.0])     |(10,[0,1,4,6,9],[12.0,18.0,1.0,1.0,144.0]) |\n",
+            "|118560|[5.0,20.0,0.0,1.0,1.0,0.0,0.0,1.0,0.0]|[5.0,20.0,0.0,1.0,1.0,0.0,0.0,1.0,0.0,25.0]|\n",
+            "|192800|(9,[0,1,4,6],[6.0,55.0,1.0,1.0])      |(10,[0,1,4,6,9],[6.0,55.0,1.0,1.0,36.0])   |\n",
+            "|116500|(9,[0,1,4,6],[12.0,16.0,1.0,1.0])     |(10,[0,1,4,6,9],[12.0,16.0,1.0,1.0,144.0]) |\n",
+            "+------+--------------------------------------+-------------------------------------------+\n",
             "only showing top 5 rows\n"
           ]
         }
@@ -201,27 +201,27 @@
         "pipeline = Pipeline(stages=indexers + encoders + [assembler])\n",
         "data = pipeline.fit(df_cleaned).transform(df_cleaned)\n",
         "\n",
-        "# # polynomial regression for MIN_YEARS_EXPERIENCE\n",
-        "# data = data.withColumn(\"MIN_YEARS_EXPERIENCE_SQ\", pow(col(\"MIN_YEARS_EXPERIENCE\"), 2))\n",
+        "# polynomial regression for MIN_YEARS_EXPERIENCE\n",
+        "data = data.withColumn(\"MIN_YEARS_EXPERIENCE_SQ\", pow(col(\"MIN_YEARS_EXPERIENCE\"), 2))\n",
         "\n",
-        "# #assemble og features plus poly feature into new feature vector\n",
-        "# assembler_poly = VectorAssembler(\n",
-        "#     inputCols=[\"features\", \"MIN_YEARS_EXPERIENCE_SQ\"],\n",
-        "#     outputCol=\"features_poly\"\n",
-        "# )\n",
-        "# data = assembler_poly.transform(data)\n",
+        "#assemble og features plus poly feature into new feature vector\n",
+        "assembler_poly = VectorAssembler(\n",
+        "    inputCols=[\"features\", \"MIN_YEARS_EXPERIENCE_SQ\"],\n",
+        "    outputCol=\"features_poly\"\n",
+        ")\n",
+        "data = assembler_poly.transform(data)\n",
         "\n",
         "#split data into training and testing sets for model evaluation\n",
         "reg_train, reg_test = data.randomSplit([0.8, 0.2], seed=51)\n",
         "#This split reserves 80% of the data for training and 20% for testing which provides enough data for the model to learn while keeping a reliable holdout set for evaluation.\n",
         "\n",
         "#displays final structure with salary as target\n",
-        "data.select(\"SALARY\", \"features\").show(5, truncate=False)"
+        "data.select(\"SALARY\", \"features\", \"features_poly\").show(5, truncate=False)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [
         {
@@ -246,7 +246,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 223:>                                                        (0 + 1) / 1]\r"
+            "[Stage 340:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -287,15 +287,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 86,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "25/10/05 18:48:51 WARN Instrumentation: [7537ab66] regParam is zero, which might cause numerical instability and overfitting.\n",
-            "[Stage 233:>                                                        (0 + 1) / 1]\r"
+            "25/10/05 19:25:01 WARN Instrumentation: [b8b5abf9] regParam is zero, which might cause numerical instability and overfitting.\n",
+            "[Stage 350:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [
         {
@@ -445,16 +445,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "25/10/05 18:53:01 WARN Instrumentation: [3534bd36] regParam is zero, which might cause numerical instability and overfitting.\n",
-            "25/10/05 18:53:06 WARN Instrumentation: [3534bd36] Cholesky solver failed due to singular covariance matrix. Retrying with Quasi-Newton solver.\n",
-            "[Stage 239:>                                                        (0 + 1) / 1]\r"
+            "25/10/05 19:26:06 WARN Instrumentation: [6e0fc769] regParam is zero, which might cause numerical instability and overfitting.\n",
+            "25/10/05 19:26:10 WARN Instrumentation: [6e0fc769] Cholesky solver failed due to singular covariance matrix. Retrying with Quasi-Newton solver.\n",
+            "[Stage 356:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -506,55 +506,28 @@
         "\n",
         "print(f\"Polynomial Regression R²: {r2}\")\n",
         "print(f\"Polynomial Regression RMSE: {rmse}\")\n",
-        "print(f\"Polynomial Regression MAE: {mae}\")\n",
-        "\n"
+        "print(f\"Polynomial Regression MAE: {mae}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 89,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "          Feature   Coefficient    Std Error    t-value       p-value  \\\n",
-            "0       Intercept  67932.172201   365.427981  34.124107  0.000000e+00   \n",
-            "1   PolyFeature_0  12469.903484    23.369295  -1.746680  8.071963e-02   \n",
-            "2   PolyFeature_1    -40.818670  6795.398159  -0.378451  7.051025e-01   \n",
-            "3   PolyFeature_2  -2571.726155  1051.916215  -1.110934  2.666199e-01   \n",
-            "4   PolyFeature_3  -1168.609779  2990.337025  -1.899043  5.758388e-02   \n",
-            "5   PolyFeature_4  -5678.777125  3572.973249  -2.128946  3.327990e-02   \n",
-            "6   PolyFeature_5  -7606.667528  2435.260898   3.109557  1.878259e-03   \n",
-            "7   PolyFeature_6   7572.582266  2501.762396   3.565968  3.639866e-04   \n",
-            "8   PolyFeature_7   8921.205741  3137.964205   7.286182  3.397282e-13   \n",
-            "9   PolyFeature_8  22863.778828    26.275186 -16.193368  0.000000e+00   \n",
-            "10  PolyFeature_9   -425.483749  3581.211738  18.969047  0.000000e+00   \n",
-            "\n",
-            "    95% CI Lower  95% CI Upper  \n",
-            "0   67215.871148  68648.473253  \n",
-            "1   12424.095687  12515.711281  \n",
-            "2  -13360.955886  13279.318546  \n",
-            "3   -4633.661011   -509.791298  \n",
-            "4   -7030.179413   4692.959856  \n",
-            "5  -12682.412944   1324.858694  \n",
-            "6  -12380.193459  -2833.141596  \n",
-            "7    2668.702078  12476.462454  \n",
-            "8    2770.261704  15072.149779  \n",
-            "9   22812.274990  22915.282666  \n",
-            "10  -7445.268409   6594.300910  \n"
-          ]
-        },
-        {
-          "ename": "NameError",
-          "evalue": "name 'features' is not defined",
+          "ename": "UnsupportedOperationException",
+          "evalue": "No Std. Error of coefficients available for this LinearRegressionModel",
           "output_type": "error",
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 44\u001b[39m\n\u001b[32m     41\u001b[39m coef_poly_df[\u001b[33m\"\u001b[39m\u001b[33m95\u001b[39m\u001b[33m%\u001b[39m\u001b[33m CI Upper\u001b[39m\u001b[33m\"\u001b[39m] = coef_poly_df[\u001b[33m\"\u001b[39m\u001b[33mCoefficient\u001b[39m\u001b[33m\"\u001b[39m] + critical_value * coef_poly_df[\u001b[33m\"\u001b[39m\u001b[33mStd Error\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     43\u001b[39m \u001b[38;5;28mprint\u001b[39m(coef_poly_df)\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfeatures\u001b[49m)\n",
-            "\u001b[31mNameError\u001b[39m: name 'features' is not defined"
+            "\u001b[31mUnsupportedOperationException\u001b[39m             Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[89]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m coefficients = poly_model.coefficients\n\u001b[32m      5\u001b[39m intercept = poly_model.intercept\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m std_errors = \u001b[43msummary_poly\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcoefficientStandardErrors\u001b[49m\n\u001b[32m      7\u001b[39m t_values = summary_poly.tValues\n\u001b[32m      8\u001b[39m p_values = summary_poly.pValues\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~/assignment-04-tanyasiii/.venv/lib/python3.12/site-packages/pyspark/ml/regression.py:705\u001b[39m, in \u001b[36mLinearRegressionSummary.coefficientStandardErrors\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    690\u001b[39m \u001b[38;5;129m@property\u001b[39m\n\u001b[32m    691\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcoefficientStandardErrors\u001b[39m(\u001b[38;5;28mself\u001b[39m) -> List[\u001b[38;5;28mfloat\u001b[39m]:\n\u001b[32m    692\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    693\u001b[39m \u001b[33;03m    Standard error of estimated coefficients and intercept.\u001b[39;00m\n\u001b[32m    694\u001b[39m \u001b[33;03m    This value is only available when using the \"normal\" solver.\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    703\u001b[39m \u001b[33;03m    LinearRegression.solver\u001b[39;00m\n\u001b[32m    704\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m705\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_java\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcoefficientStandardErrors\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~/assignment-04-tanyasiii/.venv/lib/python3.12/site-packages/pyspark/ml/util.py:254\u001b[39m, in \u001b[36mtry_remote_call.<locals>.wrapped\u001b[39m\u001b[34m(self, name, *args)\u001b[39m\n\u001b[32m    252\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m deserialize(properties)\n\u001b[32m    253\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m254\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~/assignment-04-tanyasiii/.venv/lib/python3.12/site-packages/pyspark/ml/wrapper.py:87\u001b[39m, in \u001b[36mJavaWrapper._call_java\u001b[39m\u001b[34m(self, name, *args)\u001b[39m\n\u001b[32m     84\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m sc \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m     86\u001b[39m java_args = [_py2java(sc, arg) \u001b[38;5;28;01mfor\u001b[39;00m arg \u001b[38;5;129;01min\u001b[39;00m args]\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m _java2py(sc, \u001b[43mm\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43mjava_args\u001b[49m\u001b[43m)\u001b[49m)\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~/assignment-04-tanyasiii/.venv/lib/python3.12/site-packages/py4j/java_gateway.py:1362\u001b[39m, in \u001b[36mJavaMember.__call__\u001b[39m\u001b[34m(self, *args)\u001b[39m\n\u001b[32m   1356\u001b[39m command = proto.CALL_COMMAND_NAME +\\\n\u001b[32m   1357\u001b[39m     \u001b[38;5;28mself\u001b[39m.command_header +\\\n\u001b[32m   1358\u001b[39m     args_command +\\\n\u001b[32m   1359\u001b[39m     proto.END_COMMAND_PART\n\u001b[32m   1361\u001b[39m answer = \u001b[38;5;28mself\u001b[39m.gateway_client.send_command(command)\n\u001b[32m-> \u001b[39m\u001b[32m1362\u001b[39m return_value = \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1363\u001b[39m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1365\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[32m   1366\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[33m\"\u001b[39m\u001b[33m_detach\u001b[39m\u001b[33m\"\u001b[39m):\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~/assignment-04-tanyasiii/.venv/lib/python3.12/site-packages/pyspark/errors/exceptions/captured.py:288\u001b[39m, in \u001b[36mcapture_sql_exception.<locals>.deco\u001b[39m\u001b[34m(*a, **kw)\u001b[39m\n\u001b[32m    284\u001b[39m converted = convert_exception(e.java_exception)\n\u001b[32m    285\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[32m    286\u001b[39m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[32m    287\u001b[39m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m288\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    289\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    290\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+            "\u001b[31mUnsupportedOperationException\u001b[39m: No Std. Error of coefficients available for this LinearRegressionModel"
           ]
         }
       ],
